src/objects/Lcm_CaseTest__c.object
<CustomObject>
    <description>Testing Adv</description>
    <fields>
        <fullName>Lcm_TestErgebnis__c</fullName>
        <description>Ergebnis des Tests</description>
        <inlineHelpText>Ergebnis des Tests</inlineHelpText>
        <label>Ergebnis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>offen</fullName>
                    <color>#999999</color>
                    <default>true</default>
                    <label>offen</label>
                </value>
                <value>
                    <fullName>erfolgreich</fullName>
                    <color>#78C953</color>
                    <label>erfolgreich</label>
                </value>
                <value>
                    <fullName>nicht erfolgreich</fullName>
                    <color>#FF0000</color>
                    <label>nicht erfolgreich</label>
                </value>
                <value>
                    <fullName>obsolet</fullName>
                    <color>#66FF99</color>
                    <label>obsolet</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lcm_TestKommentar__c</fullName>
        <description>Kommentarfeld für Tickettester</description>
        <label>Test-Kommentar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_TestRolle__c</fullName>
        <description>Rolle, die den Test durchführt</description>
        <inlineHelpText>Rolle, die den Test durchführt</inlineHelpText>
        <label>Rolle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Developer</fullName>
                </value>
                <value>
                    <fullName>2 Requirementsmanager</fullName>
                </value>
                <value>
                    <fullName>3 Fachbereich</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lcm_TestTester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name des Testers</description>
        <inlineHelpText>Name des Testers</inlineHelpText>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ticket_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lcm_TestTicketNr__c</fullName>
        <description>Ticket-Nr.</description>
        <inlineHelpText>Ticket-Nr.</inlineHelpText>
        <label>Ticket-Nr.</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Ticket-Tests</relationshipLabel>
        <relationshipName>Ticket_Tests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lcm_Warning__c</fullName>
        <formula>&apos;Bitte Testergebnis, z.B. Screenshot, zur Dokumentation anhängen.&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACHTUNG</label>
        <type>Text</type>
    </fields>
    <label>Ticket-Test</label>
    <nameField>
        <displayFormat>TIT-{0000}</displayFormat>
        <label>Ticket-Testnr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket-Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>